--- a/src/main.less
+++ b/src/main.less
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .drag-bar {
   width: 100px;
   height: 100px;
@@ -13,10 +17,6 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 body {
