--- a/src/main.less
+++ b/src/main.less
@@ -66,6 +66,9 @@ strong {
   }
 }
 
-[data-tauri-drag-region] {
-  app-region: drag
+.quick-input {
+  .drag-handle {
+    height: 20px;
+    background-color: orange;
+  }
 }
